@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2010, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,24 +30,19 @@
  *
  * @author  Mandy Chung
  *
- * @library /lib/testlibrary/
- * @build LowMemoryTest MemoryUtil RunUtil
- * @run main/timeout=600 LowMemoryTest
- * @requires vm.opt.ExplicitGCInvokesConcurrent != "true"
- * @requires vm.opt.ExplicitGCInvokesConcurrentAndUnloadsClasses != "true"
- * @requires vm.opt.DisableExplicitGC != "true"
+ * @build LowMemoryTest MemoryUtil
+ * @run main/othervm/timeout=600 LowMemoryTest
  */
 
 import java.lang.management.*;
 import java.util.*;
-import java.util.concurrent.Phaser;
 import javax.management.*;
 import javax.management.openmbean.CompositeData;
 
 public class LowMemoryTest {
-    private static final MemoryMXBean mm = ManagementFactory.getMemoryMXBean();
-    private static final List<MemoryPoolMXBean> pools = ManagementFactory.getMemoryPoolMXBeans();
-    private static final Phaser phaser = new Phaser(2);
+    private static MemoryMXBean mm = ManagementFactory.getMemoryMXBean();
+    private static List pools = ManagementFactory.getMemoryPoolMXBeans();
+    private static List managers = ManagementFactory.getMemoryManagerMXBeans();
     private static MemoryPoolMXBean mpool = null;
     private static boolean trace = false;
     private static boolean testFailed = false;
@@ -55,23 +50,8 @@ public class LowMemoryTest {
     private static final int NUM_CHUNKS = 2;
     private static long chunkSize;
 
-    /**
-     * Run the test multiple times with different GC versions.
-     * First with default command line specified by the framework.
-     * Then with GC versions specified by the test.
-     */
-    public static void main(String a[]) throws Throwable {
-        final String main = "LowMemoryTest$TestMain";
-        RunUtil.runTestKeepGcOpts(main);
-        RunUtil.runTestClearGcOpts(main, "-XX:+UseSerialGC");
-        RunUtil.runTestClearGcOpts(main, "-XX:+UseParallelGC");
-        RunUtil.runTestClearGcOpts(main, "-XX:+UseG1GC");
-        RunUtil.runTestClearGcOpts(main, "-XX:+UseConcMarkSweepGC");
-    }
-
-    private static volatile boolean listenerInvoked = false;
+    private static boolean listenerInvoked = false;
     static class SensorListener implements NotificationListener {
-        @Override
         public void handleNotification(Notification notif, Object handback) {
             String type = notif.getType();
             if (type.equals(MemoryNotificationInfo.MEMORY_THRESHOLD_EXCEEDED) ||
@@ -88,16 +68,9 @@ public class LowMemoryTest {
     }
 
     static class TestListener implements NotificationListener {
-        private boolean isRelaxed = false;
         private int triggers = 0;
-        private final long[] count = new long[NUM_TRIGGERS * 2];
-        private final long[] usedMemory = new long[NUM_TRIGGERS * 2];
-
-        public TestListener() {
-            isRelaxed = ManagementFactory.getRuntimeMXBean().getInputArguments().contains("-XX:+UseConcMarkSweepGC");
-        }
-
-        @Override
+        private long[] count = new long[NUM_TRIGGERS * 2];
+        private long[] usedMemory = new long[NUM_TRIGGERS * 2];
         public void handleNotification(Notification notif, Object handback) {
             MemoryNotificationInfo minfo = MemoryNotificationInfo.
                 from((CompositeData) notif.getUserData());
@@ -106,8 +79,7 @@ public class LowMemoryTest {
             triggers++;
         }
         public void checkResult() throws Exception {
-            if ((!isRelaxed && triggers != NUM_TRIGGERS) ||
-                (isRelaxed && triggers < NUM_TRIGGERS)) {
+            if (triggers != NUM_TRIGGERS) {
                 throw new RuntimeException("Unexpected number of triggers = " +
                     triggers + " but expected to be " + NUM_TRIGGERS);
             }
@@ -129,97 +101,117 @@ public class LowMemoryTest {
     }
 
     private static long newThreshold;
+    public static void main(String args[]) throws Exception {
+        if (args.length > 0 && args[0].equals("trace")) {
+            trace = true;
+        }
 
-    private static class TestMain {
-        public static void main(String args[]) throws Exception {
-            if (args.length > 0 && args[0].equals("trace")) {
-                trace = true;
-            }
-
-            // Find the Old generation which supports low memory detection
-            ListIterator iter = pools.listIterator();
-            while (iter.hasNext()) {
-                MemoryPoolMXBean p = (MemoryPoolMXBean) iter.next();
-                if (p.getType() == MemoryType.HEAP &&
+        // Find the Old generation which supports low memory detection
+        ListIterator iter = pools.listIterator();
+        while (iter.hasNext()) {
+            MemoryPoolMXBean p = (MemoryPoolMXBean) iter.next();
+            if (p.getType() == MemoryType.HEAP &&
                     p.isUsageThresholdSupported()) {
-                    mpool = p;
-                    if (trace) {
-                        System.out.println("Selected memory pool for low memory " +
-                            "detection.");
-                        MemoryUtil.printMemoryPool(mpool);
-                    }
-                    break;
+                mpool = p;
+                if (trace) {
+                    System.out.println("Selected memory pool for low memory " +
+                        "detection.");
+                    MemoryUtil.printMemoryPool(mpool);
                 }
+                break;
             }
+        }
 
-            TestListener listener = new TestListener();
-            SensorListener l2 = new SensorListener();
-            NotificationEmitter emitter = (NotificationEmitter) mm;
-            emitter.addNotificationListener(listener, null, null);
-            emitter.addNotificationListener(l2, null, null);
+        TestListener listener = new TestListener();
+        SensorListener l2 = new SensorListener();
+        NotificationEmitter emitter = (NotificationEmitter) mm;
+        emitter.addNotificationListener(listener, null, null);
+        emitter.addNotificationListener(l2, null, null);
 
-            Thread allocator = new AllocatorThread();
-            Thread sweeper = new SweeperThread();
+        Thread allocator = new AllocatorThread();
+        Thread sweeper = new SweeperThread();
 
-            // Now set threshold
-            MemoryUsage mu = mpool.getUsage();
-            chunkSize = (mu.getMax() - mu.getUsed()) / 20;
-            newThreshold = mu.getUsed() + (chunkSize * NUM_CHUNKS);
+        // Now set threshold
+        MemoryUsage mu = mpool.getUsage();
+        chunkSize = (mu.getMax() - mu.getUsed()) / 20;
+        newThreshold = mu.getUsed() + (chunkSize * NUM_CHUNKS);
 
-            System.out.println("Setting threshold for " + mpool.getName() +
-                " from " + mpool.getUsageThreshold() + " to " + newThreshold +
-                ".  Current used = " + mu.getUsed());
-            mpool.setUsageThreshold(newThreshold);
+        System.out.println("Setting threshold for " + mpool.getName() +
+            " from " + mpool.getUsageThreshold() + " to " + newThreshold +
+            ".  Current used = " + mu.getUsed());
+        mpool.setUsageThreshold(newThreshold);
 
-            if (mpool.getUsageThreshold() != newThreshold) {
-                throw new RuntimeException("TEST FAILED: " +
+        if (mpool.getUsageThreshold() != newThreshold) {
+            throw new RuntimeException("TEST FAILED: " +
                 "Threshold for Memory pool " + mpool.getName() +
                 "is " + mpool.getUsageThreshold() + " but expected to be" +
                 newThreshold);
-            }
-
-
-            allocator.start();
-            // Force Allocator start first
-            phaser.arriveAndAwaitAdvance();
-            sweeper.start();
-
-
-            try {
-                allocator.join();
-                // Wait until AllocatorThread's done
-                phaser.arriveAndAwaitAdvance();
-                sweeper.join();
-            } catch (InterruptedException e) {
-                System.out.println("Unexpected exception:" + e);
-                testFailed = true;
-            }
-
-            listener.checkResult();
-
-            if (testFailed)
-                throw new RuntimeException("TEST FAILED.");
-
-            System.out.println(RunUtil.successMessage);
-
         }
+
+        allocator.start();
+        sweeper.start();
+
+        try {
+            allocator.join();
+            sweeper.join();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+            System.out.println("Unexpected exception.");
+            testFailed = true;
+        }
+
+        listener.checkResult();
+
+        if (testFailed)
+            throw new RuntimeException("TEST FAILED.");
+
+        System.out.println("Test passed.");
+
     }
 
     private static void goSleep(long ms) {
         try {
             Thread.sleep(ms);
         } catch (InterruptedException e) {
-            System.out.println("Unexpected exception:" + e);
+            e.printStackTrace();
+            System.out.println("Unexpected exception.");
             testFailed = true;
         }
     }
 
-    private static final List<Object> objectPool = new ArrayList<>();
+    private static Object go = new Object();
+    private static boolean waiting = false; // No thread is waiting.
+
+    // Synchronizes two thread. If no thread is waiting then wait
+    // for notification from a different thread  and if it is
+    // is waiting then send notification.
+    // In this test case this method is used to synchronize sweeper
+    // thread and alocater thread to reach a particular point.
+    private static void wait_or_notify() {
+        synchronized (go) {
+            if (waiting == false) {
+                waiting = true;
+                System.out.println(" Waiting ");
+                try {
+                    go.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                    testFailed = true;
+                }
+                waiting = false;
+            } else {
+                System.out.println(" Notify ");
+                go.notify();
+            }
+        }
+    }
+
+    private static List objectPool = new ArrayList();
     static class AllocatorThread extends Thread {
         public void doTask() {
             int iterations = 0;
             int numElements = (int) (chunkSize / 4); // minimal object size
-            while (!listenerInvoked || mpool.getUsage().getUsed() < mpool.getUsageThreshold()) {
+            while (!listenerInvoked) {
                 iterations++;
                 if (trace) {
                     System.out.println("   Iteration " + iterations +
@@ -242,25 +234,23 @@ public class LowMemoryTest {
                 goSleep(100);
             }
         }
-        @Override
         public void run() {
             for (int i = 1; i <= NUM_TRIGGERS; i++) {
-                // Sync with SweeperThread's second phase.
-                phaser.arriveAndAwaitAdvance();
-                System.out.println("AllocatorThread is doing task " + i +
-                    " phase " + phaser.getPhase());
+                System.out.println("AllocatorThread is doing task " + i);
                 doTask();
-                // Sync with SweeperThread's first phase.
-                phaser.arriveAndAwaitAdvance();
-                System.out.println("AllocatorThread done task " + i +
-                    " phase " + phaser.getPhase());
-                if (testFailed) {
-                    return;
+                synchronized (sweep) {
+                    sweep.notify();
                 }
+                // System.out.print(" Allocater Thread ");
+                // If sweeper thread is waiting then send notify
+                // else wait for notification from sweeper thread.
+                wait_or_notify();
+                if (testFailed) return;
             }
         }
     }
 
+    private static Object sweep = new Object();
     static class SweeperThread extends Thread {
         private void doTask() {
             for (; mpool.getUsage().getUsed() >=
@@ -271,21 +261,28 @@ public class LowMemoryTest {
                 goSleep(100);
             }
         }
-        @Override
         public void run() {
             for (int i = 1; i <= NUM_TRIGGERS; i++) {
-                // Sync with AllocatorThread's first phase.
-                phaser.arriveAndAwaitAdvance();
-                System.out.println("SweepThread is doing task " + i +
-                    " phase " + phaser.getPhase());
+                synchronized (sweep) {
+                    while (!listenerInvoked) {
+                        try {
+                            sweep.wait();
+                        } catch (InterruptedException e) {
+                            e.printStackTrace();
+                            System.out.println("Unexpected exception.");
+                            testFailed = true;
+                        }
+                    }
+                }
+                System.out.println("SweepThread is doing task " + i);
                 doTask();
 
                 listenerInvoked = false;
 
-                // Sync with AllocatorThread's second phase.
-                phaser.arriveAndAwaitAdvance();
-                System.out.println("SweepThread done task " + i +
-                    " phase " + phaser.getPhase());
+                // System.out.print(" Sweeper Thread ");
+                // If Allocater thread is waiting wait send notify
+                // else wait for notfication from allocater thread.
+                wait_or_notify();
                 if (testFailed) return;
             }
         }
